fixed menu items overlapping menu button

--- a/resources/assets/scss/core/_module.scss
+++ b/resources/assets/scss/core/_module.scss
@@ -450,6 +450,7 @@
 
         @include breakpoint($break-620) {
             float: right;
+            background: transparent;
         }
 
         &:hover {
